istio/yamlfiles/deployment-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
    service: redis-service
spec:
  ports:
    - name: http
      port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      version: v1
  template:
    metadata:
      labels:
        app: redis
        version: v1
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
