istio/yamlfiles/deployment-userapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: userapi-service
  labels:
    app: userapi
    service: userapi-service
spec:
  type: NodePort
  selector:
    app: userapi
  ports:
    - name: http
      port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi-deployment-v1
  labels:
    app: userapi
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
      version: v1
  template:
    metadata:
      labels:
        app: userapi
        version: v1
    spec:
      containers:
        - name: userapi
          image: userapi-v1
          ports:
            - containerPort: 3001
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi-deployment-v2
  labels:
    app: userapi
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
      version: v2
  template:
    metadata:
      labels:
        app: userapi
        version: v2
    spec:
      containers:
        - name: userapi
          image: userapi-v2
          ports:
            - containerPort: 3001
