istio/yamlfiles/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: userapi-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 3001
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - userapi-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: userapi-service
            port:
              number: 3001
