istio/yamlfiles/virtual-service-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - userapi-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: userapi-service
        subset: v1
        port:
          number: 3001
      weight: 50
    - destination:
        host: userapi-service
        subset: v2
        port:
          number: 3001
      weight: 50
