istio/yamlfiles/virtual-service-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis
spec:
  hosts:
    - redis
  http:
    - route:
        - destination:
            host: redis
            port:
              number: 6379
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi
spec:
  hosts:
    - userapi
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: userapi
            subset: v2
            port:
              number: 3001
